# fastapi-chat

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docker_compose/: all.yaml  app.yaml  db.yaml  kafka.yaml
src/api/v1/: lifespan.py  main.py  schemas.py
src/api/v1/chats/: filters.py  handlers.py  schemas.py
src/api/v1/websockets/: chats.py
src/app/: app.py  main.py
src/domain/entities/: base.py  chat.py  message.py
src/domain/events/: base.py  chat.py
src/domain/exceptions/: base.py  chat.py  message.py
src/domain/values/: base.py  chat.py  message.py
src/infrastructure/managers/: connection_manager.py
src/infrastructure/message_brokers/: base.py  mock.py
src/infrastructure/repositories/: base.py  memory.py
src/infrastructure/websockets/: connection_manager.py
src/logic/: init_container.py  init_mediator.py  mediator.py
src/logic/commands/: base.py  chat.py  message.py
src/logic/events/: base.py  chat.py  integrations.py  message.py
src/logic/exceptions/: base.py  chat.py  mediator.py
src/logic/mediator/: command.py  event.py  mediator.py
src/message_brokers/: base.py
src/message_brokers/kafka/: kafka.py
src/repositories/: base.py  converter.py  converters.py  memory.py  mongo.py
src/repositories/mongo/: base.py  chat.py  converters.py  message.py
src/settings/: config.py  dbconfig.py  init_container.py
src/tests/: conftest.py
src/tests/app/api/: conftest.py
src/tests/domain/: test_chats.py  test_messages.py
src/tests/logic/: test_chat.py
(+12 files in other folders)
